# opentelemetry-stacktrace-processor

./: .gitignore  .pre-commit-config.yaml  README.md  config.go  config_test.go  factory.go  factory_test.go  go.mod  go.sum  pyproject.toml  sonar-project.properties  stacktrace_processor.go  stacktrace_processor_test.go
.github/: CONTRIBUTING.md  dependabot.yml  renovate.json
.github/workflows/: linting.yaml  tests.yaml
testdata/: lineSlicer.min.js.map
